unpackaged/main/default/objects/Assessment_Checklist_Question__c/Assessment_Checklist_Question__c.object-meta.xml
<CustomObject>
    <label>Assessment Checklist Question</label>
    <nameField>
        <displayFormat>CLQ-{00000}</displayFormat>
        <label>Checklist Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Checklist Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>