unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Assessment_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Checklist__c</fullName>
    <label>Assessment Checklist</label>
    <referenceTo>Assessments__c</referenceTo>
    <relationshipLabel>Assessment Checklist Questions</relationshipLabel>
    <relationshipName>Assessment_Checklist_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>