unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Assessment_Checklist_Section__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Checklist_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Checklist Section</label>
    <referenceTo>Assessment_Checklist_Section__c</referenceTo>
    <relationshipLabel>Assessment Checklist Questions</relationshipLabel>
    <relationshipName>Assessment_Checklist_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>