unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Comments_Action__c.field-meta.xml
<CustomField>
    <fullName>Comments_Action__c</fullName>
    <label>Comments/Action</label>
    <type>TextArea</type>
</CustomField>