unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Compliant__c.field-meta.xml
<CustomField>
    <fullName>Compliant__c</fullName>
    <label>Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliant_Value_set</valueSetName>
    </valueSet>
</CustomField>