unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Correction__c.field-meta.xml
<CustomField>
    <fullName>Correction__c</fullName>
    <label>Correction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>