unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Evidence_Required__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Required__c</fullName>
    <label>Evidence Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Photocopy</fullName>
            </value>
            <value>
                <fullName>Photograph</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>