unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Guidance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Notes__c</fullName>
    <label>Guidance Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>