unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/ImageUploadLocal__c.field-meta.xml
<CustomField>
    <fullName>ImageUploadLocal__c</fullName>
    <label>ImageUploadLocal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>