unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Other_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Other_Evidence__c</fullName>
    <label>Other Evidence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>