unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Question_Answered__c.field-meta.xml
<CustomField>
    <fullName>Question_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is ticked if the question is answered in the Assured mobile app.</description>
    <inlineHelpText>This is ticked if the question is answered in the Assured mobile app.</inlineHelpText>
    <label>Question Answered</label>
    <type>Checkbox</type>
</CustomField>