unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <length>20</length>
    <type>Text</type>
</CustomField>