unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Subsection__c.field-meta.xml
<CustomField>
    <fullName>Subsection__c</fullName>
    <label>Subsection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>