unpackaged/main/default/objects/Assessment_Checklist_Question__c/fields/Subsection_Order__c.field-meta.xml
<CustomField>
    <fullName>Subsection_Order__c</fullName>
    <label>Subsection Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>