unpackaged/main/default/objects/Assessment_Checklist_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Checklist__c</columns>
    <columns>Standard_Order__c</columns>
    <columns>Standard__c</columns>
    <columns>Summary__c</columns>
    <columns>Compliant__c</columns>
    <columns>Comments_Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Standard__c</field>
        <operation>startsWith</operation>
        <value>T</value>
    </filters>
    <filters>
        <field>Compliant__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>